source/sass/views/home.scss
#view-home {
  .section-padding {
    padding-top: 3rem;
    padding-bottom: 3rem;

    @media (min-width: $bp-md) {
      padding-top: 5rem;
      padding-bottom: 5rem;
    }
  }

  .section-cause-statement {
    background: $black;
    margin-top: -28px;

    @media (min-width: $bp-md) {
      margin-top: -48px;
    }

    .h4-heading {
      font-weight: 600;

      @media (min-width: $bp-md) {
        font-weight: 500;
      }
    }

    .cta-link {
      font-weight: 700;
    }
  }

  .section-spotlight {
    .capsule-label {
      @include set-text-size(14px, 16px);

      font-family: $font-family-sans-serif;
      font-weight: 800;
      display: inline-block;
      background: $black;
      color: $white;
      padding: 0.5rem 1rem;
      border-radius: 1000px; // any big random number should work
      z-index: 2;
      position: relative;
      bottom: -50%;
    }

    .spotlight-banner {
      background-size: cover;
      background-position: center;
      height: 240px;

      @media (min-width: $bp-md) {
        height: 255px;
      }

      @media (min-width: $bp-lg) {
        height: 400px;
      }
    }

    .spotlight-headline {
      font-weight: 700;
    }

    .spotlight-post {
      $vertical-spacing: 1.5rem;

      &:first-child {
        @include media-breakpoint-down(sm) {
          margin-top: $vertical-spacing;
        }
      }

      &:not(:last-child) {
        border-bottom: 1px solid $black;
        padding-bottom: $vertical-spacing;
        margin-bottom: $vertical-spacing;
      }
    }
  }

  .section-take-action {
    .take-action-title {
      @include set-text-size(22px, 30px, 24px, 30px);

      font-family: $font-family-sans-serif;
      font-weight: bold;
    }

    .join-us .btn {
      display: block;
      width: 100%;

      @media screen and (max-width: $bp-lg) and (min-width: $bp-md) {
        // TODO:
        // See if we can avoid having !important by altering the existing join-us React/SCSS code.
        // Do this after we've merged the homepage work as touching join-us code can
        // easily affect existing sign up forms on the site.
        display: inline;
        width: auto !important;
      }
    }
  }

  .section-quote {
    $icon-height: 41px;
    $icon-width: 49px;
    $icon-margin-bottom: 1.5rem;

    picture {
      display: block;

      @include media-breakpoint-only(md) {
        // tablet only
        margin-top: calc(#{$icon-height} + #{$icon-margin-bottom});
      }
    }

    blockquote {
      &::before {
        display: block;
        content: "";
        background: url(../_images/homepage/open-quote.svg);
        height: $icon-height;
        width: $icon-width;
        margin-bottom: $icon-margin-bottom;
      }

      .quote-text {
        @include set-text-size(18px, 27px, 24px, 34px);

        font-family: $font-family-sans-serif;
        font-style: normal;
        font-weight: 300;
      }

      footer {
        cite,
        p {
          @include set-text-size(16px, 24px, 20px, 30px);
        }

        cite {
          font-weight: 800;
          font-style: normal;
        }
      }
    }
  }

  .section-news-you-can-use {
    background: $gray-05;

    h2.h4-heading {
      @include set-text-size(22px, 30px, 24px, 30px);

      font-family: $font-family-sans-serif;
      font-weight: 700;
    }

    .feature {
      min-height: 400px;

      .feature-image {
        position: absolute;
        left: 0;
        width: 65%;
        height: 100%;

        img {
          height: inherit;
          object-fit: cover;
        }
      }

      .feature-content {
        $border-thickness: 4px;

        width: 50%;
        padding: 2.5rem;
        margin: 10px 0;
        background: $white;
        border-bottom: $border-thickness solid $black;
        position: relative;
        top: $border-thickness / 2;
        z-index: 2;
      }
    }
  }

  .areas-of-focus {
    h2.focus-heading {
      font-family: $font-family-sans-serif;
      font-style: normal;
      font-weight: 700;
      font-size: 1.5em;
    }

    .icon {
      max-width: 4em;
      max-height: 4em;
    }

    .learn-more-link {
      font-size: 18px;
      font-weight: 700;
    }
  }
}

.highlights-card {
  &:first-of-type {
    margin-bottom: 1.5rem;

    @media screen and (min-width: $bp-md) {
      margin-bottom: 0;
    }
  }
}

/**
* Partner section
*/
.partner-section {
  background-size: cover;
  background-position-y: top;
  background-position-x: right;
  position: relative;
  z-index: 10;
  padding-top: 80px;
  padding-bottom: 80px;
}

.partner-section::before {
  content: "";
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparentize($black, 0.6);
}

.partner-section-text {
  @include text-base-style("Nunito Sans", 300, $black, $white);
  @include set-text-size(20px, 30px);
  font-size: 20px;
  max-width: 450px;
}

.partner-section-logos {
  position: relative;
  z-index: 1;
}

.partner-section-logo {
  margin-right: 48px;
  margin-top: 75px;
}

@media (max-width: $bp-md) {
  .partner-section-logo {
    margin-top: 63px;
  }
}

@media (max-width: $bp-sm) {
  .partner-section {
    padding-top: 48px;
    padding-bottom: 48px;
  }
}

